--- a/styles.css
+++ b/styles.css
@@ -4,65 +4,67 @@
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 body {
-    background-color: rgba(0, 0, 255, 0.329);
+    background-color: rgb(218, 218, 219);
 }
 .container {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
-    gap: 50px;
-    background-color: rgb(206, 11, 11);
-    margin: 10px 500px;
-}
-h1 {
-    position: absolute;
-    top: 0px;
-    padding: 20px;
-    color: rgba(255, 255, 0, 0.842);
-    font-size: 50px;
-    font-style: italic;
+    flex-direction: row;
+    gap: 200px;
+
 }
 
+h1 {
+    font-size: 50px;
+    text-align: center;
+    padding: 50px;
+}
 .grid {
-    margin-top: 100px;
-    background-color: lightgray;
+    background-color: white;
     display: flex;
-    width: 700px;
-    height: 700px;
+    width: 600px;
+    height: 600px;
     justify-content: center;
     align-items: center;
-    border: solid black 2px;
+    box-shadow: 2px 2px 10px gray;
+    
 }
 
-.get-user-input {
+.controls {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 50px;
 }
 
-input {
-    height: 50px;
-    text-align: left;
-    font-size: 20px;
-    background-color: lightgray;
-    width: 500px;
+
+.slider { 
+    height: 4px;
+    appearance: none;
+    width: 200px;
     color: gray;
-    padding-left: 10px;
+    accent-color: black;
+    border-radius: 25px;
+    cursor: pointer;
+}
+
+.slider-number {
+    text-align: center;
+    font-size: 25px;
 }
 
 
-
-
-.grid .cell {
-    border: solid black 1px;
-
-}
 
 button {
     padding: 10px;
-    background-color: lightgray;
+    background-color: white;
+    max-width: 100px;
+    min-width: 100px;
 }
 
 button:hover {
